<resources>
    <string name="app_name">Habiter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="judul">HABITER</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_label">Email</string>
    <string name="default_web_client_id">129213189117-766d2s0onubev128pl4lmdf47629r369.apps.googleusercontent.com</string>
    <string name="oneTask_button">One Time Task</string>
    <string name="regularTask_button">Regular Task</string>
    <string name="label_name_of_habit">Name of Habit</string>
    <string name="label_custom_color">Custom Color</string>
    <string name="save_button">Save</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="display_name">Display Name</string>
    <string name="save">Save</string>
    <string name="delete_my_account">Delete My Account</string>
    <string name="enter_email_for_reset_password">Enter your email and we will send you a link to get back into your accout.</string>
    <string name="email_place_holder">your email</string>
    <string name="send_link">Send Link</string>
    <string name="new_habit">New Habit</string>
    <string name="date">Date</string>
    <string name="repeat_on">Repeat On</string>
    <string name="s">S</string>
    <string name="f">F</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="m">M</string>
    <string name="repeat_every_day">Repeat every day</string>
    <string name="set_end_date">Set end date</string>
    <string name="avatar">Avatar</string>
    <string name="hai">Hai,</string>
    <string name="name_example">Sumitra</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_fab">Add Fab</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="if_you_don_t_have_an_account_yet">If you don\'t have an account yet?</string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="terms">By using this application you agree to the Terms of Services</string>
    <string name="i_have_an_account">I Have an Account</string>
    <string name="get_started">Get Started</string>
    <string name="v1">V.1.0</string>
    <string name="setting">Setting</string>
    <string name="general">General</string>
    <string name="logout">Logout</string>
    <string name="example_email">example@gmail.com</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="re_password">Re-Password</string>
    <string name="pass_terms">Use 8 or more characters with a mix of letters, numbers and symbols.</string>
    <string name="ask_account">Do you have already an account?</string>
    <string name="sign_up_with_google">Sign up With Google</string>
    <string name="go_for_it">Go For It!</string>
    <string name="title_task">Title Task</string>
    <string name="date_sample">11</string>
    <string name="mon">Mon</string>
    <string name="pick_a_date">1&#8211;1&#8211;2000</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="repeat_habit">Repeat Habit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_button">Setting button</string>
    <string name="button_delete_task">button delete task</string>
    <string name="button_check_task">button check task</string>
    <string name="button_undo_task">button undo task</string>
    <string name="tittle_setting">Setting</string>
    <string name="btn_label_edit_profile">Edit Profile</string>
    <string name="btn_label_logout">Logout</string>
    <string name="label_danger_zone">Danger Zone</string>
    <string name="label_general">General</string>
    <string name="cd_profile_image">Profile Image</string>
    <string name="button_label_delete_account">Delete Account</string>
    <string name="btn_label_delete_account">Delete Account</string>
    <string name="cd_close_page">close page</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="label_display_name">Display Name</string>
    <string name="cd_input_edit_display_name">input edit display name</string>
    <string name="hint_display_name">Enter your new name</string>
    <string name="btn_label_save">Save</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_full_name">Enter your name</string>
    <string name="hint_repassword">Enter your password again</string>
    <string name="btn_signin">Sign In</string>
    <string name="cd_button_setting">button setting</string>
    <string name="cd_setting">setting</string>
    <string name="cd_delete_task">delete task</string>
    <string name="cd_update_task">update task</string>
    <string name="cd_add_task">add task</string>
    <string name="hint_title_task">Enter title task</string>
    <string name="label_title">Title</string>
    <string name="label_description">Description</string>
    <string name="hint_describe_your_task_here">Describe your task here</string>
    <string name="title_new_task">New Task</string>
    <string name="type_verif">Type the verification phrase</string>
    <string name="ru_sure">Are you sure to delete your account?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="verification_message">Verification Message</string>
    <string name="verif1">Verification Step to Delete</string>
    <string name="verif2">Your Habiter Account</string>
    <string name="are_you_sure_to_delete">Are you sure to delete?</string>
    <string name="verification_message_below">Verification Message</string>
    <string name="verification_message_is">verification_message_is</string>
    <string name="verif_message_placeholder">delete your_account@email.com</string>
    <string name="label_verification">Please enter the verification message to delete your account</string>
    <string name="title_delete_account">Delete Account</string>
</resources>