<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1C23"
    android:fitsSystemWindows="true"
    tools:context=".screen.DeleteAccountActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/verif1"
            android:textColor="#a2a285"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/verif2"
            android:textColor="#a2a285"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/text1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="12dp"
        android:text="@string/judul"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="64dp"
        app:drawableStartCompat="@drawable/warning_sign"
        />

    <LinearLayout
        android:id="@+id/profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingTop="60dp"
        android:paddingBottom="25dp"
        app:layout_constraintTop_toBottomOf="@+id/logo">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="4dp"
            android:text="@string/are_you_sure_to_delete"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="RtlSymmetry" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="4dp"
                android:text="@string/verification_message_below"
                android:textColor="@color/white"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/input_verification_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="8dp"
                android:background="@drawable/bg_input"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:hint="@string/verif_message_placeholder"
                android:textColorHint="@color/silver"
                android:labelFor="@id/input_username"
                android:autofillHints="" />
        </LinearLayout>
        <!--button for cancel (green color) and confirm (red color) is here-->

        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_button"
                android:backgroundTint="@color/stabilo"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/darkGray"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:background="@drawable/bg_button"
                android:backgroundTint="@color/red_confirm"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textStyle="bold" />

        </LinearLayout>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>