<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1C23"
    tools:context=".screen.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="24dp"
                android:drawablePadding="12dp"
                android:text="@string/judul"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/label_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/label_text_ph"
                    android:text="@string/fullname"
                    android:textColor="@color/white"
                    android:textSize="@dimen/h4"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/input_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="8dp"
                    android:autofillHints="name"
                    android:background="@drawable/bg_input"
                    android:hint="@string/hint_full_name"
                    android:inputType="textEmailAddress"
                    android:labelFor="@+id/label_email"
                    android:padding="@dimen/input_p"
                    android:textColor="@color/white"
                    android:textColorHint="@color/silver"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/label_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/label_text_ph"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="@dimen/h4"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="8dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/bg_input"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:labelFor="@+id/label_email"
                    android:padding="@dimen/input_p"
                    android:textColor="@color/white"
                    android:textColorHint="@color/silver"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/label_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="@dimen/label_text_ph"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/h4"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="8dp"
                    android:autofillHints="password"
                    android:background="@drawable/bg_input"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:labelFor="@+id/label_password"
                    android:padding="@dimen/input_p"
                    android:textColor="@color/white"
                    android:textColorHint="@color/silver"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/label_re_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="@dimen/label_text_ph"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/h4"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/input_re_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="8dp"
                    android:autofillHints="password"
                    android:background="@drawable/bg_input"
                    android:hint="@string/hint_repassword"
                    android:inputType="textPassword"
                    android:labelFor="@+id/label_password"
                    android:padding="@dimen/input_p"
                    android:textColor="@color/white"
                    android:textColorHint="@color/silver"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="8dp"
                    android:paddingHorizontal="@dimen/label_text_ph"
                    android:text="@string/pass_terms"
                    android:textColor="@color/white"
                    android:textSize="@dimen/h4"
                    tools:ignore="RtlSymmetry" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@id/button_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button"
                    android:backgroundTint="@color/button_primary"
                    android:padding="@dimen/btn_p"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btn_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="12dp"
                    android:paddingHorizontal="@dimen/label_text_ph"
                    android:text="@string/or"
                    android:textColor="@color/white"
                    android:textSize="@dimen/h4"
                    tools:ignore="RtlSymmetry" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button"
                    android:backgroundTint="@color/white"
                    android:minHeight="48dp"
                    android:padding="@dimen/btn_p"
                    android:text="@string/sign_up_with_google"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_text_size"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="12dp"
                android:layout_marginBottom="12dp"
                android:paddingHorizontal="@dimen/label_text_ph"
                android:text="@string/ask_account"

                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/h4"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/bg_button"
                android:backgroundTint="@color/gray"
                android:minHeight="48dp"
                android:padding="@dimen/btn_p"
                android:text="@string/btn_signin"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/btn_text_size"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
    >
</ScrollView>