<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1C23"
    android:fitsSystemWindows="true"
    tools:context=".screen.DeleteAccountActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/header_mh"
        android:paddingVertical="@dimen/header_mv"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_close_setting"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/cd_close_page"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:text="@string/title_delete_account"
            android:textColor="@color/white"
            android:textSize="@dimen/h2"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:drawablePadding="12dp"
        android:text="@string/judul"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure_to_delete"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_marginBottom="12dp"
            android:paddingHorizontal="@dimen/label_text_ph"
            tools:ignore="RtlSymmetry"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/label_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:paddingHorizontal="@dimen/label_text_ph"
            android:text="@string/label_verification"
            android:textColor="@color/white"
            android:textSize="@dimen/h4"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/input_verification_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="8dp"
            android:autofillHints=""
            android:background="@drawable/bg_input"
            android:hint="@string/verif_message_placeholder"
            android:inputType="text"
            android:labelFor="@+id/label_email"
            android:padding="@dimen/input_p"
            android:textColor="@color/white"
            android:textColorHint="@color/silver"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_button"
            android:backgroundTint="@color/button_primary"
            android:padding="@dimen/btn_p"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>