<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1C23"
    android:fitsSystemWindows="true"
    tools:context=".screen.SettingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_close_setting"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/ic_close"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:labelFor="@id/button_close_setting"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/setting"
            android:textColor="#a2a285"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingTop="50dp"
        android:paddingBottom="25dp"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="18dp"
            android:src="@drawable/avatar_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textfullName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/name_example"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/example_email"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_button"
            android:backgroundTint="@color/gray"
            android:paddingHorizontal="20dp"
            android:text="@string/edit_profil"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/profil">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/general"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rectangle_fill"
            android:backgroundTint="@color/gray"
            android:drawableStart="@drawable/ic_logout"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawablePadding="12dp"
            android:drawableTint="@color/white"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:text="@string/logout"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>